--- a/CustomerGUI/backend/.env
+++ b/CustomerGUI/backend/.env
@@ -1,5 +1,5 @@
 PSQL_HOST = 'csce-315-db.engr.tamu.edu'
-PSQL_USER = 'csce315_902_garcia'
+PSQL_USER = 'csce315_902_amiji'
 PSQL_DATABASE = 'csce315_902_6'
-PSQL_PASSWORD = '130006657'
-PSQL_PORT = '5432'
+PSQL_PASSWORD = '328001688'
+PSQL_PORT = 5432
