--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # dependencies
 ManagerGUI/ejs/node_modules
 ManagerGUI/ejs/.pnp
+ServerGUI/server_backend/node_modules
+CustomerGUI/backend/node_modules
 .pnp.js
 
 # testing
