--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-ManagerGUI/ejs/node_modules
-ManagerGUI/ejs/.pnp
-ServerGUI/server_backend/node_modules
-CustomerGUI/backend/node_modules
-CustomerGUI/frontend/node_modules
+ejs/node_modules
+ejs/.pnp
+managerproj/node_modules
+server_backend/node_modules
+server_frontend/node_modules
+backend/node_modules
+frontend/node_modules
 .pnp.js
 
 # testing
