--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-google-oauth": "^1.0.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
@@ -46,7 +47,6 @@
   "proxy": "http://localhost:3001/",
   "devDependencies": {
     "sass": "^1.56.0",
-    "sass-loader": "^13.1.0",
-    "webpack": "^5.74.0"
+    "sass-loader": "^13.1.0"
   }
 }
