--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-google-oauth": "^1.0.0",
+    "react-magnifier": "^3.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
