--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,7 +48,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://starbucks-backend.onrender.com",
+  "proxy": "https://starbucks-backend.onrender.com/",
   "devDependencies": {
     "sass": "^1.56.0",
     "sass-loader": "^13.1.0"
