--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://starbucks-backend.onrender.com",
   "devDependencies": {
     "jsdoc": "^4.0.0",
     "sass": "^1.56.0",
